--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ haxe:
   - development
 
 install:
-  haxelib install utest
-  haxelib git hxnodejs https://github.com/HaxeFoundation/hxnodejs
-  haxelib git mcover https://github.com/massiveinteractive/mcover master src
+  - haxelib install utest
+  - haxelib git hxnodejs https://github.com/HaxeFoundation/hxnodejs
+  - haxelib git mcover https://github.com/massiveinteractive/mcover master src
 
 script:
   - haxe test.hxml
